an update on the whatsapp social link on the pic

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
                         <div class="col-lg-5 col-12 me-auto mb-4 mb-lg-0">
                             <h3 class="mb-3">JCC Gateway</h3>
 
-                            <p><strong>Opened </strong>on July By Bishop Kimeu Justus </p>
+                            <p><strong>JCC Gateway</strong>is a ministry of Jesus Celebration Center founded in the precints of Nairobi and operate from Signature mall at Sabaki.</p>
+                            <p><strong>JCC Gateway</strong>is led and pastored by Justus Kimeu as the Lead Pastor.<br> A vibrant congregation passionate in worship and detailed in word and doctrine, JCC Gateway is your spiritual destination and home.</p>
+                            <p>I together with my wife Dorothy, Welcome you to a fulfilling spiritual experience</p>
 
                             <p> Please tell your friends about our website. Thank you for visiting.</p>
                         </div>
@@ -136,16 +138,14 @@
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
                             <div class="member-block">
                                 <div class="member-block-image-wrap">
-                                    <img src="images/members/profle.jpg" class="member-block-image img-fluid" alt="">
+                                    <img src="images\members\pastor Kimeu.jpg" class="member-block-image img-fluid" alt="">
 
                                     <ul class="social-icon">
+                                       
                                         <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-twitter"></a>
+                                            <a href="https://api.whatsapp.com/send?phone=+254725997979" class="social-icon-link bi-whatsapp"></a>
                                         </li>
 
-                                        <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-whatsapp"></a>
-                                        </li>
                                     </ul>
                                 </div>
 
