--- a/index.html
+++ b/index.html
@@ -422,7 +422,15 @@
                     <div class="row">
 
                         <div class="col-lg-5 col-12">
-                            <form action="#" method="post" class="custom-form contact-form" role="form">
+                            
+                                <form id="contactForm" action="https://formsubmit.co/0788e1368b9f8a50cf21113813e47ee3" method="POST" class="custom-form contact-form" role="form">
+									<!--Honeypot-->
+									<input type="text" name="_honey" style="display: none;">
+
+									<!--Disable Captcha-->
+									<input type="hidden" name="_captcha" value="false">
+								<!--Success page-->
+									<input type="hidden" name="_next" value="https://jccgatewaydemo.netlify.app/success.html">
                                 <h2 class="mb-4 pb-2">Contact JCC Gateway</h2>
 
                                 <div class="row">
