--- a/success.html
+++ b/success.html
@@ -76,5 +76,16 @@
             </nav>
 
         </main>
+
+        
+
+         <!-- JAVASCRIPT FILES -->
+         <script src="js/jquery.min.js"></script>
+         <script src="js/bootstrap.bundle.min.js"></script>
+         <script src="js/jquery.sticky.js"></script>
+         <script src="js/click-scroll.js"></script>
+         <script src="js/animated-headline.js"></script>
+         <script src="js/modernizr.js"></script>
+         <script src="js/custom.js"></script>
     </body>
 </html>
