--- a/success.html
+++ b/success.html
@@ -74,7 +74,24 @@
                     </div>
                 </div>
             </nav>
+            
+            <section class="about-section section-padding" id="section_2">
+                <div class="container">
+                    <div class="row">
 
+                        <div class="col-lg-12 col-12 text-center">
+                            <h2 class="mb-lg-5 mb-4">Submitted Successfully</h2>
+                        </div>
+
+                        <div class="col-lg-5 col-12 me-auto mb-4 mb-lg-0">
+                            <h3 class="mb-3">JCC Gateway</h3>
+
+                            <p><strong>Received</strong> </p>
+                            <p>We will get back to you shortly</p>
+
+                            <p> Please tell your friends about our website. Thank you for visiting.</p>
+                        </div>
+            </section>
         </main>
 
         
