--- a/success.html
+++ b/success.html
@@ -90,6 +90,7 @@
                             <p>We will get back to you shortly</p>
 
                             <p> Please tell your friends about our website. Thank you for visiting.</p>
+                            <p>Click here to go Back to <a href="index.html">Main Page</a> </p>
                         </div>
             </section>
         </main>
