--- a/success.html
+++ b/success.html
@@ -56,26 +56,12 @@
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_4">Events</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_5">Contact Us</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-
-                                <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="event-listing.html">Event Listing</a></li>
-
-                                    <li><a class="dropdown-item" href="event-detail.html">Event Detail</a></li>
-                                </ul>
-                            </li>
                         </ul>
                     </div>
                 </div>
             </nav>
 
-            <section class="hero-section d-flex justify-content-center align-items-center" id="section_1">
+            <section>
 
                 <div class="section-overlay"></div>
 
@@ -92,7 +78,7 @@
                             <p>We will get back to you shortly</p>
 
                             <p> Please tell your friends about our website. Thank you for visiting.</p>
-                            <p>Click here to go Back to <a href="index.html">Main Page</a> </p>   
+                            <p>Click here to go Back to <a href="index.html"> Main Page</a> </p>   
 
                             
                         </div>
