--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
             <section class="membership-section section-padding" id="section_3">
                 <div class="container">
-                    <div class="row" >
+                    <div class="row" class="center">
 
                         <div class="col-lg-12 col-12 text-center mx-auto mb-lg-5 mb-4">
                             <h2><span>Services</span> at JCC Gateway</h2>
