--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
                         </style>
                         
                         <div class="col-lg-5 col-12 mx-auto">
-                            <form action="https://www.youtube.com/@jesuscelebrationcentregate8769" method="post" class="custom-form membership-form shadow-lg" role="form">
-                                <h4 class="text-white mb-4">Here is Our Youtube Channel...Join us Live</h4>
+                            <form action="#" method="post" class="custom-form membership-form shadow-lg" role="form">
+                                <h4 class="text-white mb-4">Here is Our YouTube Channel...Join Us Live</h4>
                                 <div class="col-lg-6 col-12 video-container">
                                     <iframe src="https://www.youtube.com/embed/GUNC5zaCQ8E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
-                                <button type="submit" class="form-control">Go to YouTube Channel</button>
+                                    <a href="https://www.youtube.com/channel/UCGeLUl-OEQvtqJ0pQeqBXpg" target="_blank" class="form-control">Go to YouTube Channel</a>
                             </form>
                         </div>
                         
