styling the button

--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
                                 border-radius: 10px; /* Add border radius for smoother edges */
                                 margin-bottom: 10px;
                             }
+
+                            .custom-button {
+                                background-color: rgb(77, 11, 139);
+                                /* Add any additional styles as needed */
+                            }
                         </style>
                         
                         <div class="col-lg-5 col-12 mx-auto">
@@ -302,7 +307,7 @@
                                 <div class="col-lg-6 col-12 video-container">
                                     <iframe src="https://www.youtube.com/embed/GUNC5zaCQ8E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
-                                    <a href="https://www.youtube.com/channel/UCGeLUl-OEQvtqJ0pQeqBXpg" target="_blank" class="form-control">Go to YouTube Channel</a>
+                                    <a href="https://www.youtube.com/channel/UCGeLUl-OEQvtqJ0pQeqBXpg" target="_blank" class="form-control custom-button">Go to YouTube Channel</a>
                             </form>
                         </div>
                         
